--- a/Dockerfile-freeradius
+++ b/Dockerfile-freeradius
@@ -47,10 +47,11 @@ RUN apt-get update && \
 	freeradius-mysql \
         cron \
  && apt-get clean \
- && rm -rf /var/lib/apt/lists/*
-
+ && rm -rf /var/lib/apt/lists/* \
 # PHP Pear DB library install
-RUN pear install DB
+ && pear install DB \
+ && pear install -a Mail \
+ && pear install -a Mail_Mime
 
 # Add current project directory which should be a clone of daloradius from:
 # git@github.com:lirantal/daloradius.git
