--- a/Dockerfile-freeradius
+++ b/Dockerfile-freeradius
@@ -13,7 +13,7 @@ MAINTAINER Liran Tal <liran.tal@gmail.com>
 
 LABEL Description="daloRADIUS Official Docker based on Ubuntu 16.04 LTS and PHP7." \
 	License="GPLv2" \
-	Usage="docker build . -t lirantal/daloradius && docker run -d -p 80:80 lirantal/daloradius" \
+	Usage="docker build -t lirantal/daloradius -f Dockerfile-freeradius && docker run -d -p 80:80 lirantal/daloradius" \
 	Version="1.0"
 
 # silence package installations to that debpkg doesn't prompt for mysql
