--- a/Dockerfile-standalone
+++ b/Dockerfile-standalone
@@ -2,13 +2,13 @@ FROM php:7.4-apache-buster
 # default timezone
 ENV TZ Asia/Jakarta
 
-RUN apt update && apt -y upgrade \
-&& apt -y install libpng-dev libjpeg62-turbo-dev libfreetype6-dev libwebp-dev libmariadb-dev \
+RUN apt-get update && apt-get -y upgrade \
+&& apt-get -y install libpng-dev libjpeg62-turbo-dev libfreetype6-dev libwebp-dev libmariadb-dev \
 && ln -snf /usr/share/zoneinfo/$TZ /etc/localtime \
 && update-ca-certificates -f 
 RUN docker-php-ext-configure mysqli \
 && docker-php-ext-configure pdo_mysql \
-&& docker-php-ext-configure gd \
+&& docker-php-ext-configure gd --with-freetype --with-jpeg \
 && docker-php-ext-install mysqli \
 && docker-php-ext-install pdo_mysql \
 && docker-php-ext-install gd 
