--- a/Dockerfile-standalone
+++ b/Dockerfile-standalone
@@ -1,16 +1,26 @@
-FROM php:7-apache
-# default timezone
-ENV TZ Asia/Jakarta
+FROM alpine AS source
 
-RUN apt update && apt -y upgrade \
-&& apt -y install libpng-dev libjpeg62-turbo-dev libfreetype6-dev libwebp-dev libmariadb-dev \
-&& && rm -rf /var/lib/apt/lists/* \
-&& ln -snf /usr/share/zoneinfo/$TZ /etc/localtime \
-&& update-ca-certificates -f 
+RUN apk add git
+
+WORKDIR /tmp/
+
+RUN git clone https://github.com/lirantal/daloradius.git /tmp/daloradius
+
+
+FROM php:7-apache
+
+ENV TZ UTC
+
+RUN apt-get update && apt-get -y upgrade \
+ && apt-get -y install libpng-dev libjpeg62-turbo-dev libfreetype6-dev libwebp-dev libmariadb-dev --no-install-recommends \
+ && rm -rf /var/lib/apt/lists/* \
+ && ln -snf /usr/share/zoneinfo/$TZ /etc/localtime \
+ && update-ca-certificates -f
+
 RUN docker-php-ext-configure gd --with-freetype --with-jpeg \
-&& docker-php-ext-configure pdo_mysql \
-&& docker-php-ext-configure mysqli \
-&& docker-php-ext-install \
+ && docker-php-ext-configure pdo_mysql \
+ && docker-php-ext-configure mysqli \
+ && docker-php-ext-install \
                        gd \
                 pdo_mysql \
                    mysqli
@@ -19,3 +29,10 @@ RUN pear channel-update pear.php.net \
  && pear install -a -f Mail \
  && pear install -a -f Mail_Mime
 
+COPY --from=source /tmp/daloradius/app/ /var/www/html/daloradius
+COPY --from=source /tmp/daloradius/app/common/includes/daloradius.conf.php.sample /var/www/html/daloradius/common/includes/daloradius.conf.php
+
+COPY ./contrib/scripts/apache-config.sh /usr/local/bin
+
+RUN chmod +x /usr/local/bin/apache-config.sh \
+&& sh /usr/local/bin/apache-config.sh
