User test function, fix of incorrect if statements that incorrectly ignored config if it existed  Fix init script to add variables for password length, and better catch of missing config file or missing content from config file.  More consistent lock file location, always /data now  New user wizard, some attributes should be Reply, rather than Check items.

--- a/Dockerfile-freeradius
+++ b/Dockerfile-freeradius
@@ -35,7 +35,7 @@ RUN apt-get update \
 
 # Create directories
 # /data should be mounted as volume to avoid recreation of database entries
-RUN mkdir /app /data /internal_data
+RUN mkdir /app /data
 WORKDIR /app
 
 # Copy init script to image
