Started implementing new mailing system based on PHPMailer

--- a/app/common/includes/daloradius.conf.php.sample
+++ b/app/common/includes/daloradius.conf.php.sample
@@ -69,6 +69,7 @@ $configValues['CONFIG_DB_TBL_DALOMESSAGES'] = 'messages';
 $configValues['CONFIG_FILE_RADIUS_PROXY'] = '/etc/freeradius/3.0/proxy.conf';
 $configValues['CONFIG_PATH_RADIUS_DICT'] = '';
 $configValues['CONFIG_PATH_DALO_VARIABLE_DATA'] = '/var/www/daloradius/var';
+$configValues['CONFIG_PATH_DALO_TEMPLATES_DIR'] = '/var/www/daloradius/app/common/templates';
 $configValues['CONFIG_DB_PASSWORD_ENCRYPTION'] = 'yes';
 $configValues['CONFIG_LANG'] = 'en';
 $configValues['CONFIG_LOG_PAGES'] = 'no';
@@ -90,6 +91,12 @@ $configValues['CONFIG_MAIL_SMTPADDR'] = '127.0.0.1';
 $configValues['CONFIG_MAIL_SMTPPORT'] = '25';
 $configValues['CONFIG_MAIL_SMTPAUTH'] = '';
 $configValues['CONFIG_MAIL_SMTPFROM'] = 'root@daloradius.xdsl.by';
+$configValues['CONFIG_MAIL_ENABLED'] = 'no';
+$configValues['CONFIG_MAIL_SMTP_SECURITY'] = 'tls';
+$configValues['CONFIG_MAIL_SMTP_SENDER_NAME'] = 'daloRADIUS Mailer';
+$configValues['CONFIG_MAIL_SMTP_SUBJECT_PREFIX'] = '[daloRADIUS]';
+$configValues['CONFIG_MAIL_SMTP_USERNAME'] = '';
+$configValues['CONFIG_MAIL_SMTP_PASSWORD'] = '';
 $configValues['CONFIG_DASHBOARD_DALO_SECRETKEY'] = 'sillykey';
 $configValues['CONFIG_DASHBOARD_DALO_DEBUG'] = '1';
 $configValues['CONFIG_DASHBOARD_DALO_DELAYSOFT'] = '5';
